--- a/CommonCore/Milestone2/push_swap/.vscode/launch.json
+++ b/CommonCore/Milestone2/push_swap/.vscode/launch.json
@@ -9,7 +9,8 @@
 			"type": "cppdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/a.out",
-			"args": ["14", "58", "11", "30", "79", "28", "92", "69", "36", "22", "1", "9", "3"],
+			"args": ["-13", "-53", "-60", "-78", "96", "-72", "34", "71", "-8", "-82", "25", "-32", "-35", "-18", "42", "-21", "-89", "-19", "61", "-66", "56", "-20", "-76", "85", "-3", "-77", "-36", "50", "21", "33", "-83", "92", "-74", "16", "18", "31", "-61", "-51", "-62", "70", "-63", "63", "-31", "-40", "-90", "-44", "81", "-99", "-16", "5", "-55"
+],
 			"stopAtEntry": false,
 			"cwd": "${fileDirname}",
 			"environment": [],
