--- a/CommonCore/Milestone0/Libft/Makefile
+++ b/CommonCore/Milestone0/Libft/Makefile
@@ -1,4 +1,5 @@
 NAME = libft.a
+
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
@@ -35,9 +36,9 @@ SRCS = ft_atoi.c \
 	ft_strtrim.c \
 	ft_substr.c \
 	ft_tolower.c \
-	ft_toupper.c \
+	ft_toupper.c
 
-BONUS_SRCS = ft_lstadd_back.c \
+SRCS_BONUS = ft_lstadd_back.c \
 			ft_lstadd_front.c \
 			ft_lstclear.c \
 			ft_lstdelone.c \
@@ -45,25 +46,32 @@ BONUS_SRCS = ft_lstadd_back.c \
 			ft_lstlast.c \
 			ft_lstnew.c \
 			ft_lstmap.c \
-			ft_lstsize.c \
+			ft_lstsize.c
 
 OBJS = $(SRCS:.c=.o)
-BONUS_OBJS = $(BONUS_SRCS:.c=.o)
+OBJS_BONUS = $(SRCS_BONUS:.c=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	ar rcs $(NAME) $(OBJS)
+	@echo "Creating $(NAME)..."
+	@ar rcs $(NAME) $(OBJS)
 
-bonus: $(OBJS) $(BONUS_OBJS)
-	ar rcs $(NAME) $(OBJS) $(BONUS_OBJS)
+bonus: $(OBJS) $(OBJS_BONUS)
+	@echo "Adding bonus functions..."
+	@ar rcs $(NAME) $(OBJS) $(OBJS_BONUS)
+
+%.o: %.c
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -rf $(OBJS) $(BONUS_OBJS)
+	rm -rf $(OBJS) $(OBJS_BONUS)
 
 fclean: clean
 	rm -rf $(NAME)
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re bonus
+.SILENT: all clean fclean re bonus
+
