--- a/CommonCore/Milestone2/pipex/Makefile
+++ b/CommonCore/Milestone2/pipex/Makefile
@@ -3,44 +3,37 @@ NAME_BONUS = pipex_bonus
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
-SRC =	forking.c \
+SRCS =	forking.c \
 		utils1.c \
 		utils2.c
 
-SRC_BONUS = bonus/forking_bonus.c \
+SRCS_BONUS = bonus/forking_bonus.c \
 			bonus/here_doc.c \
 			bonus/utils_bonus.c
 
-OBJS = $(SRC:.c=.o)
-OBJS_BONUS = $(SRC_BONUS:.c=.o)
+SRCS_ALL = $(SRCS) $(SRCS_BONUS)
 
 LIBFT_DIR = ./libft
 LIBFT = ./libft/libft.a
 
-normal: $(NAME)
+all: $(NAME)
 
 bonus: $(NAME_BONUS)
-
-all: $(NAME) $(NAME_BONUS)
 
 $(LIBFT):
 	@echo "Compiling libft..."
 	@$(MAKE) -C $(LIBFT_DIR) --quiet
 
-$(NAME): $(LIBFT) $(OBJS) pipex.o
+$(NAME): $(LIBFT) $(SRCS) pipex.c
 	@echo "Compiling $(NAME)..."
-	@$(CC) $(CFLAGS) $(OBJS) pipex.o $(LIBFT) -o $(NAME)
+	@$(CC) $(CFLAGS) $(SRCS) pipex.c $(LIBFT) -I$(CURDIR) -o $(NAME)
 
-$(NAME_BONUS): $(LIBFT) $(OBJS) $(OBJS_BONUS) ./bonus/pipex_bonus.o
+$(NAME_BONUS): $(LIBFT) $(SRCS_ALL) ./bonus/pipex_bonus.c
 	@echo "Compiling $(NAME_BONUS)..."
-	@$(CC) $(CFLAGS) $(OBJS) $(OBJS_BONUS) ./bonus/pipex_bonus.o $(LIBFT) -o $(NAME_BONUS)
-
-%.o: %.c
-	@$(CC) $(CFLAGS) -I$(CURDIR) -I$(LIBFT_DIR) -c $< -o $@
+	@$(CC) $(CFLAGS) $(SRCS_ALL) ./bonus/pipex_bonus.c $(LIBFT) -I$(CURDIR) -o $(NAME_BONUS)
 
 clean:
 	@echo "Removing object files..."
-	@rm -rf $(OBJS) $(OBJS_BONUS) pipex.o ./bonus/pipex_bonus.o
 	@$(MAKE) -C $(LIBFT_DIR) clean --quiet
 
 fclean: clean
