--- a/CommonCore/Milestone2/push_swap/Makefile
+++ b/CommonCore/Milestone2/push_swap/Makefile
@@ -16,38 +16,33 @@ SRCS =  ./algorithm/algorithm_1.c \
 SRCS_BONUS =	./bonus/function_bonus_1.c \
 				./bonus/function_bonus_2.c 
 
-OBJS = $(SRCS:.c=.o)
-OBJS_BONUS = $(SRCS_BONUS:.c=.o)
+SRC_ALL = $(SRCS) $(SRCS_BONUS)
 
 LIBFT_DIR = ./libft
 LIBFT = ./libft/libft.a
 
-normal: $(NAME)
+all: $(NAME)
 
 bonus: $(NAME_BONUS)
-
-all: $(NAME) $(NAME_BONUS)
 
 $(LIBFT):
 	@echo "Compiling libft..."
 	@$(MAKE) -C $(LIBFT_DIR) --quiet
 
-$(NAME): $(LIBFT) $(OBJS) push_swap.o
+$(NAME): $(LIBFT) $(SRCS) push_swap.c
 	@echo "Compiling $(NAME)..."
-	@$(CC) $(CFLAGS) $(OBJS) push_swap.o $(LIBFT) -o $(NAME)
+	@$(CC) $(CFLAGS) $(SRCS) push_swap.c $(LIBFT) -I$(CURDIR) -o $(NAME)
 
-$(NAME_BONUS): $(LIBFT) $(OBJS) $(OBJS_BONUS) ./bonus/checker.o
+$(NAME_BONUS): $(LIBFT) $(SRCS_ALL) ./bonus/checker.c
 	@echo "Compiling $(NAME_BONUS)..."
-	@$(CC) $(CFLAGS) $(OBJS) $(OBJS_BONUS) ./bonus/checker.o $(LIBFT) -o $(NAME_BONUS)
-
-%.o: %.c
-	@$(CC) $(CFLAGS) -I$(CURDIR) -I$(LIBFT_DIR) -c $< -o $@
+	@$(CC) $(CFLAGS) $(SRCS_ALL) ./bonus/checker.c $(LIBFT) -I$(CURDIR) -o $(NAME_BONUS)
 
 clean:
-	@rm -rf $(OBJS) $(OBJS_BONUS) push_swap.o ./bonus/checker.o
+	@echo "Removing object files..."
 	@$(MAKE) -C $(LIBFT_DIR) clean --quiet
 
 fclean: clean
+	@echo "Removing library and executables..."
 	@rm -rf $(NAME) $(NAME_BONUS)
 	@$(MAKE) -C $(LIBFT_DIR) fclean --quiet
 
