--- a/CommonCore/Milestone2/pipex/Makefile
+++ b/CommonCore/Milestone2/pipex/Makefile
@@ -3,15 +3,15 @@ NAME_BONUS = pipex_bonus
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
-SRCS =	forking.c \
+SRC =	forking.c \
 		utils1.c \
 		utils2.c
 
-SRCS_BONUS = bonus/forking_bonus.c \
+SRC_BONUS = bonus/forking_bonus.c \
 			bonus/here_doc.c \
 			bonus/utils_bonus.c
 
-SRCS_ALL = $(SRCS) $(SRCS_BONUS)
+SRC_ALL = $(SRC) $(SRC_BONUS)
 
 LIBFT_DIR = ./libft
 LIBFT = ./libft/libft.a
@@ -24,13 +24,13 @@ $(LIBFT):
 	@echo "Compiling libft..."
 	@$(MAKE) -C $(LIBFT_DIR) --quiet
 
-$(NAME): $(LIBFT) $(SRCS) pipex.c
+$(NAME): $(LIBFT) $(SRC) pipex.c
 	@echo "Compiling $(NAME)..."
-	@$(CC) $(CFLAGS) $(SRCS) pipex.c $(LIBFT) -I$(CURDIR) -o $(NAME)
+	@$(CC) $(CFLAGS) $(SRC) pipex.c $(LIBFT) -I$(CURDIR) -o $(NAME)
 
 $(NAME_BONUS): $(LIBFT) $(SRCS_ALL) ./bonus/pipex_bonus.c
 	@echo "Compiling $(NAME_BONUS)..."
-	@$(CC) $(CFLAGS) $(SRCS_ALL) ./bonus/pipex_bonus.c $(LIBFT) -I$(CURDIR) -o $(NAME_BONUS)
+	@$(CC) $(CFLAGS) $(SRC_ALL) ./bonus/pipex_bonus.c $(LIBFT) -I$(CURDIR) -o $(NAME_BONUS)
 
 clean:
 	@echo "Removing object files..."
