--- a/CommonCore/Milestone2/push_swap/Makefile
+++ b/CommonCore/Milestone2/push_swap/Makefile
@@ -3,20 +3,20 @@ NAME_BONUS = checker
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
-SRCS =  ./algorithm/algorithm_1.c \
-		./algorithm/algorithm_2.c \
-		./algorithm/algorithm_3.c \
-		./function/function_1.c \
-		./function/function_2.c \
-		./function/function_3.c \
-		./function/function_4.c \
-		./utils/utils_1.c \
-		./utils/utils_2.c
+SRC =  algorithm/algorithm_1.c \
+		algorithm/algorithm_2.c \
+		algorithm/algorithm_3.c \
+		function/function_1.c \
+		function/function_2.c \
+		function/function_3.c \
+		function/function_4.c \
+		utils/utils_1.c \
+		utils/utils_2.c
 
-SRCS_BONUS =	./bonus/function_bonus_1.c \
+SRC_BONUS =	./bonus/function_bonus_1.c \
 				./bonus/function_bonus_2.c 
 
-SRC_ALL = $(SRCS) $(SRCS_BONUS)
+SRC_ALL = $(SRC) $(SRC_BONUS)
 
 LIBFT_DIR = ./libft
 LIBFT = ./libft/libft.a
@@ -29,13 +29,13 @@ $(LIBFT):
 	@echo "Compiling libft..."
 	@$(MAKE) -C $(LIBFT_DIR) --quiet
 
-$(NAME): $(LIBFT) $(SRCS) push_swap.c
+$(NAME): $(LIBFT) $(SRC) push_swap.c
 	@echo "Compiling $(NAME)..."
-	@$(CC) $(CFLAGS) $(SRCS) push_swap.c $(LIBFT) -I$(CURDIR) -o $(NAME)
+	@$(CC) $(CFLAGS) $(SRC) push_swap.c $(LIBFT) -I$(CURDIR) -o $(NAME)
 
-$(NAME_BONUS): $(LIBFT) $(SRCS_ALL) ./bonus/checker.c
+$(NAME_BONUS): $(LIBFT) $(SRC_ALL) ./bonus/checker.c
 	@echo "Compiling $(NAME_BONUS)..."
-	@$(CC) $(CFLAGS) $(SRCS_ALL) ./bonus/checker.c $(LIBFT) -I$(CURDIR) -o $(NAME_BONUS)
+	@$(CC) $(CFLAGS) $(SRC_ALL) ./bonus/checker.c $(LIBFT) -I$(CURDIR) -o $(NAME_BONUS)
 
 clean:
 	@echo "Removing object files..."
